# newpoetry

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: dependency-update.sh  getLatestVersion.py  newpkg.sh
