[tool.poetry]
name = "packagename"
version = "0.1.0"
description = ""
authors = ["ccdale <chris.charles.allison+packagename@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ccaerrors = "^0.1.0"
ccalogging = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^5.0.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
